Fix text overflow for 'Transcript and Comments' (#1189)

--- a/src/ui/components/Views/NonDevView.css
+++ b/src/ui/components/Views/NonDevView.css
@@ -19,6 +19,9 @@
 .right-sidebar-toolbar-item {
   font-size: 1.25rem;
   color: var(--dark-blue);
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .right-sidebar .event-breakpoints button.expand-dropdown {
